Camera container + fade-in animations

--- a/homepage.html
+++ b/homepage.html
@@ -20,38 +20,39 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-<script src="" async defer></script>
+<body class="fade-in">
 
-<div class="links">
-    <nav>
+    <div class="links">
+        <nav>
 
-        <a href="homepage.html">Home</a></li>
-        <a href="tryityourself.html">Try it yourself</a></li>
-        <a href="#">About</a></li>
+            <a href="homepage.html">Home</a></li>
+            <a href="tryityourself.html">Try it yourself</a></li>
+            <a href="#">About</a></li>
 
-    </nav>
-</div>
+        </nav>
+    </div>
 
-<div class="homepage">
+    <div class="homepage">
 
-    <section>
-        <div class="title_text">
-            <h1>Connect Four AI: Automating Gameplay</h1>
-        </div>
-        <div class="subtitle_text">
-            <h1>A new way of playing classic board games</h1>
-        </div>
-        <div class="image">
-            <img src="C:\Users\rotar\Downloads\_2ad1a13e-1586-4ab8-b900-3674edf864ec.jpg" alt="Connect Four">
-        </div>
-        <button class="try_button" onclick="window.location.href='tryityourself.html'">TRY NOW</button>
-    </section>
+        <section>
+            <div class="title_text">
+                <h1>Connect Four AI: Automating Gameplay</h1>
+            </div>
+            <div class="subtitle_text">
+                <h1>A new way of playing classic board games</h1>
+            </div>
+            <div class="image">
+                <img src="C:\Users\rotar\Downloads\_2ad1a13e-1586-4ab8-b900-3674edf864ec.jpg" alt="Connect Four">
+            </div>
+            <button class="try_button" onclick="window.location.href='tryityourself.html'">TRY NOW</button>
+        </section>
 
-</div>
+    </div>
 
+    <div class="footer">
+        <p>&copy; 2022 Your Company. All rights reserved.</p>
+    </div>
+</body>
 
-<div class="footer">
-    <p>&copy; 2022 Your Company. All rights reserved.</p>
-</div>
 
 </html>
