--- a/homepage.html
+++ b/homepage.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+
 <html>
 
 <head>
@@ -16,18 +13,14 @@
 
 </head>
 
-<!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
 <body class="fade-in">
 
     <div class="links">
         <nav>
 
-            <a href="homepage.html">Home</a></li>
-            <a href="tryityourself.html">Try it yourself</a></li>
-            <a href="#">About</a></li>
+            <a href="homepage.html">Home</a>
+            <a href="tryityourself.html">Try it yourself</a>
+            <a href="#">About</a>
 
         </nav>
     </div>
@@ -42,7 +35,7 @@
                 <h1>A new way of playing classic board games</h1>
             </div>
             <div class="image">
-                <img src="C:\Users\rotar\Downloads\_2ad1a13e-1586-4ab8-b900-3674edf864ec.jpg" alt="Connect Four">
+                <img src="..\ConnectFour\connect4.jpg" alt="Connect Four">
             </div>
             <button class="try_button" onclick="window.location.href='tryityourself.html'">TRY NOW</button>
         </section>
@@ -50,7 +43,7 @@
     </div>
 
     <div class="footer">
-        <p>&copy; 2022 Your Company. All rights reserved.</p>
+        <p>&copy;  Rotaru Iulia-Maria - 2024</p>
     </div>
 </body>
 
