--- a/tryityourself.html
+++ b/tryityourself.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+
 <html>
 
 <head>
@@ -16,18 +13,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
-<!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
 <body class ="fade-in">
 
     <div class="links">
         <nav>
 
-            <a href="homepage.html">Home</a></li>
-            <a href="tryityourself.html">Try it yourself</a></li>
-            <a href="#">About</a></li>
+            <a href="homepage.html">Home</a>
+            <a href="tryityourself.html">Try it yourself</a>
+            <a href="#">About</a>
 
         </nav>
     </div>
@@ -43,9 +36,6 @@
                 <h1>Click the button below to take a picture of your board and get your results</h1>
             </div>
 
-            <!-- <div class="image">
-            <img src="C:\Users\rotar\Downloads\_2ad1a13e-1586-4ab8-b900-3674edf864ec.jpg" alt="Connect Four">
-        </div> -->
             <div class="camera-container">
                 <video id="cameraFeed" autoplay></video>
                 <canvas id="canvas"></canvas>
@@ -62,7 +52,7 @@
     </div>
 
     <div class="footer">
-        <p>&copy; 2022 Your Company. All rights reserved.</p>
+        <p>&copy; Rotaru Iulia-Maria - 2024</p>
     </div>
 </body>
 
